wandb/run-20230619_154849-lftd042l/files/output.log

  0%|          | 0/50 [00:00<?, ?it/s]Traceback (most recent call last):
  File "C:\Users\0005h\AppData\Local\JetBrains\Toolbox\apps\PyCharm-P\ch-0\231.9011.38\plugins\python\helpers\pydev\_pydevd_bundle\pydevd_vars.py", line 505, in change_attr_expression
    value = frame.f_locals.get(expression) or frame.f_globals.get(expression) or eval(expression, frame.f_globals, frame.f_locals)
  File "<string>", line 2
    (0): Linear(in_features=1568, out_features=256, bias=True)
       ^
SyntaxError: invalid syntax
Traceback (most recent call last):
  File "C:\Users\0005h\AppData\Local\JetBrains\Toolbox\apps\PyCharm-P\ch-0\231.9011.38\plugins\python\helpers\pydev\_pydevd_bundle\pydevd_vars.py", line 505, in change_attr_expression
    value = frame.f_locals.get(expression) or frame.f_globals.get(expression) or eval(expression, frame.f_globals, frame.f_locals)
  File "<string>", line 1
    nn.Sequential(             nn.Linear(31744, 256),             nn.ReLU(inplace=True),             nn.Linear(256, 4)
                 ^
SyntaxError: '(' was never closed
  0%|          | 0/50 [02:15<?, ?it/s]